[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kworb-spotify-scraper"
version = "1.0.0"
authors = [
    { name="Ralston Raphael" },
]
description = "A modern tool for scraping and analyzing Spotify chart data from KWORB.net"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ralstonraphael/Kworb-Spotify-Scraper"
"Bug Tracker" = "https://github.com/ralstonraphael/Kworb-Spotify-Scraper/issues" 